<resources>
    <string name="app_name">JoJo Soundboard +</string>
    <string name="action_info">Info</string>
    <string name="action_info_сontent_1">Short click on the sound plays it. If the sound is playing,
        another short click on any sound will stop it. Long click is used to download the sound.
    </string>
    <string name="action_info_сontent_2">All rights on the pictures and audio belong to:
    </string>
    <string name="action_info_сontent_3">I am just a student and a big fan of Hirohiko Araki. This
        app is only my hobby, I earn almost nothing from it. But if you want to support me directly,
        here is my WMZ
    </string>
    <string name="action_info_сontent_4">Z366091497100
    </string>
    <string name="action_settings">Settings</string>
    <string name="volume">Volume</string>
    <string name="reset">Hard reset database</string>
    <string name="reset_description">First aid when smth is bugged. Wait till the end of the process.
    You will get the notification.</string>
    <string name="addmob_app_id">ca-app-pub-9425383241584535~2611321204</string>
    <string name="banner_ad_Unit_Id">ca-app-pub-9425383241584535/5685627982</string>
    <string name="native_ad_Unit_Id">ca-app-pub-9425383241584535/1946327985</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-9425383241584535/9108199377</string>
    <string name="imageDescription">JoJo moment</string>
    <string name="button_adv">Support (Watch AD)</string>
    <string name="header">Soundboard +</string>
    <string name="action_info_сontent_5">There are two easter eggs you can find with a search bar,
    the one is pewdiepie, another is holo.</string>
    <string name="copied">Copied to the clipboard</string>
    <string name="artBy">The art by @cyberbird_art</string>
    <string name="artby">The logo art belongs to:</string>
    <string name="inst_cyberbird_art">\@cyberbird_art</string>
    <string name="first_load_message">The first load will take some time, as the database creates
        references for the further usage. Please be patient about it and wait till the end of
        the process!</string>
</resources>
